2016-09-30  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 39495: Doc/Zsh/contrib.yo, Functions/Misc/add-zle-hook-widget:
	add-zle-hook-widget: Add end-of-options guard to hook invocation.

	* 39480: Completion/Debian/Command/_bug: _reportbug: Complete
	absolute filenames, too.

2016-09-30  Barton E. Schaefer  <schaefer@zsh.org>

	* unposted: Doc/Zsh/builtins.yo: update or remove references to
	typeset behavior obsoleted by 35586.

	* 39509: Src/builtins.c: in the event the current directory has
	been removed, use chasedots semantics for "cd ..".

2016-09-30  Peter Stephenson  <p.stephenson@samsung.com>

	* 39519: Src/params.c: setting PM_EXPORT was missing in
	USE_SET_UNSET_ENV case.

	* 39517: back off 39502, this isn't a robust fix.

	* 39498: Src/parmas.c,Src/zsh.h: use PRIVILEGED option to
	decide on problematic parameter imports.

2016-09-30  Mikael Magnusson  <mikachu@gmail.com>

	* 39452 + comment from 39432: Src/Zle/zle_main.c: Call the
	pre-redraw hook if there is text in the buffer on init (from
	popping or zle-line-init setting $BUFFER)

2016-09-30  Oliver Kiddle  <opk@zsh.org>

	* 39514: Completion/Unix/Command/_git: handle --git-dir

	* 39513: Completion/Unix/Command/_doas: new doas completion

	* 39464: Completion/Solaris/Command/_fmadm: fix where lack
	of $state check caused unwanted filename completion

2016-09-29  Barton E. Schaefer  <schaefer@zsh.org>

	* 39507: Doc/Zsh/params.yo, Src/exec.c: TMPSUFFIX for =(...)

	* 39470: Src/exec.c, Src/utils.c: failure to open a supposedly
	unique temp file name should result in an error; band-aid for
	signal-related race conditions in temp file name generation

2016-09-29  Peter Stephenson  <p.stephenson@samsung.com>

	* 39502: Src/exec.c, Test/A01grammar.ztst: need to fork for
	assignment in LHS of pipeline.

	* unposted: Src/Zle/compctl.c, Src/Zle/zle_tricky.c: update
	findcmd() call here, too.

	* 39493: Src/builtin.c, Src/exec.c, Src/subst.c,
	Test/A01grammar.ztst: make "command" with multiple options work