@@ -1,3 +1,8 @@
+2016-10-02  Peter Stephenson  <p.w.stephenson@ntlworld.com>
+
+	* 39540: Src/exec.c, Test/C03traps.ztst: "! command" should
+	suppress ERR_EXIT and ERR_RETURN.
+
 2016-09-30  Daniel Shahaf  <d.s@daniel.shahaf.name>
 
 	* 39495: Doc/Zsh/contrib.yo, Functions/Misc/add-zle-hook-widget:
